# new-lengague-eks-

./: .gitignore  AGENT.md  README.md  pyproject.toml
ci/: windows-ci.yml
docs/: architecture.md  design.md  install.md  security.md  testing.md
examples/: sample1.executor.dsl
grammar/: executor.ebnf
src/cpp/: CMakeLists.txt
src/cpp/include/: executor_core.hpp  lexer.hpp  parser.hpp
src/cpp/src/: executor_core.cpp  lexer.cpp  parser.cpp
src/cpp/tests/: test_lexer.cpp  test_parser.cpp  test_quoting.cpp
src/py/dsl_exec/: __init__.py  cli.py
src/py/executor_dsl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/py/tests/: test_cli.py
